# gof-design-patterns

./: .gitignore  Pipfile  README.md  go.mod  pyproject.toml
abstract_factory/: abstract-factory-base.py  abstract-factory.py  abstract.go  abstract.py  abstract_test.go  py.html
adapter/: adapter-base.py  adapter-en.py  adapter-jp.py  adapter.go  adapter.py  adapter_test.go  test_adapter.py
bridge/: bridge-base.py  bridge-en.py  bridge-jp.py  bridge.go  bridge.py  bridge_test.go  test_bridge.py
builder/: builder-base.py  builder-en.py  builder-jp.py  builder.go  builder.py  builder_test.go  test_builder.py
chain_of_respoinsibility/: chain-of-responsibility-base.py  chain-of-responsibility-en.py  chain-of-responsibility-jp.py
command/: command-base.py  command-en.py  command-jp.py
composite/: composite-base.py  composite-en.py  composite-jp.py  composite.go  composite.py  composite_test.go  test_composite.py
decorator/: decorator-base.py  decorator-en.py  decorator-jp.py  decorator.go  decorator.py  decorator_test.go  test_decorator.py
facade/: facade-base.py  facade-en.py  facade-jp.py
factory_method/: factory-base.py  factory-en.py  factory-jp.py  factory.go  factory.py  factory_test.go  test_factory.py
flyweight/: flyweight-base.py  flyweight-en.py  flyweight-jp.py
interpreter/: interpreter-base.py  interpreter-en.py  interpreter-jp.py
iterator/: iterator-base.py  iterator-pythonic.py  iterator.go  iterator.py  iterator_test.go  test_iterator.py
mediator/: mediator-base.py  mediator.py
memento/: memento-base.py  memento-en.py  memento-jp.py
(+37 files in other folders)
